--- a/style/form.css
+++ b/style/form.css
@@ -11,12 +11,13 @@
     background-color: rgba(0, 0, 0, 0.89);
     padding:5vh 6vw;
     width: 75%;
-    max-width: 370px;
+    max-width: 330px;
     height: 70%;
 }
 .formBoxRegister{
     padding: 20px 25px 30px 30px;
     width: 85%;
+    min-width: 250px;
     max-width: 360px;
     height: 80%;
     max-height: 500px;
@@ -176,6 +177,7 @@ box-shadow: 10px 10px 10px 10vw rgba(0, 0, 0, 0.9) inset;
 outline: none;
 outline-style: none;
 outline-color: transparent;
+font-size: 14px;
 }
 .btn-submit{
     position: relative;
@@ -226,17 +228,25 @@ outline-color: transparent;
     font-size: 3.5vw;
 }
 .formBoxTask{
-    position: fixed;
+    position: absolute;
     left: -100%;
-    top: 13%;
+    top: 8%;
+    margin-top: 20px;
     width:80%;
     height: 72%;
+    max-height: 400px;
     color: white;
     background-color: rgb(18, 109, 245);
     border: 2px solid #011BEB;
-    font-size: 3vh;
+    font-size: 12px;
     transition: left 1s;
     z-index: 50;
+}
+.formBoxTask .input-container-addTask label,
+.formBoxTask .input-container-addTask select,
+.formBoxTask .input-container-addTask input,
+.formBoxTask .input-container-addTask textarea {
+    font-size: 14px;
 }
 .formBoxEditTask{
     position: relative;
@@ -251,6 +261,7 @@ outline-color: transparent;
 .formBoxTask .btn-submit button,
 .formBoxEditTask .btn-submit button{
     padding: 1vh 3vw;
+    font-size: 14px;
 }
 .formBoxTask form,
 .formBoxEditTask form{
@@ -293,6 +304,12 @@ font-weight: 700;
     .formBoxLogin{
         width: 50%;
     }
+    .formBoxTask .input-container-addTask label,
+    .formBoxTask .input-container-addTask select,
+    .formBoxTask .input-container-addTask input,
+    .formBoxTask .input-container-addTask textarea {
+    font-size: 12px;
+}
 }
 @media only screen and (min-width: 480px){
     .input-container-register label{
@@ -318,6 +335,37 @@ font-weight: 700;
     .formBoxLogin{
         padding: 5vh 40px;
     }
+    .formBoxLogin .form-container-login div h2,
+    .formBoxLogin .form-container-login div h3{
+        font-size: 16px;
+    }
+    .formBoxLogin .form-container-login div a{
+        font-size: 14px;
+    }
+    .input-container input:focus ~ label,
+    .input-container input:-webkit-autofill ~ label{
+        font-size:14px;
+    }
+    .input-container-register input:focus ~ label,
+    .input-container-register input:-webkit-autofill     ~ label{
+        font-size:12px;
+    }
+    .input-container label{
+        font-size:14px;
+    }
+    .form-container-register .btn-submit button{
+        padding: 5px 40px;
+    }
+    .btn-submit button,
+    .btn-form button{
+        font-size:18px;
+    }
+    .form-container-register div h2{
+        font-size: 18px;
+    }
+    .formBoxTask{
+        margin-top: 10px;
+    }
 }
 @media only screen and (min-width: 769px){
     #contactInf {
@@ -338,17 +386,17 @@ font-weight: 700;
     }
     .formBoxTask{
         position: relative;
-        width:27%;
+        width:26%;
         height: 72%;
+        min-height:300px;
         max-height: 420px;
-        margin-top: 50px;
-        left: 0.5%;
-        top: 2%;
+        left: 1%;
+        margin-top: 0;
+        top: 12.5%;
         font-size: 14px;
     }
-    .formBoxTask .input-container-addTask label,
-    .formBoxTask .input-container-addTask input{
-        font-size: 14px;
+    main .formBoxTask:focus-within{
+        left: 1%;
     }
     .formBoxTask .input-container-addTask button{
         padding: 5px 15px;
@@ -357,18 +405,5 @@ font-weight: 700;
     .formBoxEditTask form > div{
     height: 100%;
     padding: 10px 35px;
-    }
-    .formBoxTask .btn-submit button{
-        font-size: 18px;
-    }
-    /* .formBoxTask div{
-        padding: 1vh 1vw;
-    } */
-    /* .formBoxTask div .input-container-addTask button{
-        font-size: 3vh;
-        padding: 1vh 2vw;
-    } */
-    main .formBoxTask:focus-within{
-        left: 0;
     }
 }
