--- a/style/form.css
+++ b/style/form.css
@@ -164,7 +164,7 @@ width: 100%;
     right: 0;
     top: 30%;
     font-size: 12px;
-    color: rgb(18, 109, 245);
+    color: #2B66FF;
 }
 .formBoxLogin a:visited,
 .formBoxRegister a:visited{
@@ -207,7 +207,7 @@ box-shadow: 10px 10px 10px 10vw rgba(0, 0, 0, 0.9) inset;
     grid-template-columns: 30% 60%;
     column-gap: 10%;
     row-gap: 5vh;
-    background-color:rgb(18, 109, 245);
+    background-color:#2B66FF;
     margin: 6vh auto 0 auto;
     border-radius: 1%;
     padding: 5vh 5vw;
@@ -236,7 +236,7 @@ box-shadow: 10px 10px 10px 10vw rgba(0, 0, 0, 0.9) inset;
     height: 72%;
     max-height: 400px;
     color: white;
-    background-color: rgb(18, 109, 245);
+    background-color: #2B66FF;
     border: 2px solid #011BEB;
     font-size: 12px;
     transition: left 1s;
@@ -254,7 +254,7 @@ box-shadow: 10px 10px 10px 10vw rgba(0, 0, 0, 0.9) inset;
     height: 70%;
     width: 70%;
     max-width: 430px;
-    background-color: rgb(18, 109, 245);
+    background-color: #2B66FF;
     padding: 2vh 2vw;
     font-size: 3vh;
 }
