--- a/style/style.css
+++ b/style/style.css
@@ -121,9 +121,9 @@ a:active {
 .other-submenu,
 .btn-menu {
   position: absolute;
+  top: 0;
   color: white;
-  transition: top 0.5s ease-out;
-  transition-delay: 0.7s;
+  transition: top 0.5s ease-out 0.5s;
 }
 .other-submenu {
   display: flex;
@@ -148,8 +148,7 @@ a:active {
   width: 100vw;
   height: 25vh;
   top: 35vh;
-  transition: top 0.5s ease-out;
-  transition-delay: 0.7s;
+  transition: top 0.5s ease-out 0.5s;
   z-index: 30;
 }
 .btn-menu:focus {
