--- a/style/form.css
+++ b/style/form.css
@@ -14,14 +14,16 @@
     width: 75%;
     max-width: 330px;
     height: 70%;
+    min-height: 240px;
 }
 .formBoxRegister{
     padding: 20px 25px 30px 30px;
     width: 85%;
-    min-width: 250px;
+    min-width: 240px;
     max-width: 360px;
     height: 80%;
     max-height: 500px;
+    min-height: 360px;
     background-color: rgba(0, 0, 0, 0.89);
 }
 .formBoxLogin form{
@@ -39,11 +41,11 @@
     grid-template-rows:  repeat(5,20%);
 }
 .formBoxLogin .form-container-login div h2{
-    font-size: 4vh;
+    font-size: 14px;
     text-align: center;
 }
 .formBoxLogin .form-container-login div h3{
-    font-size: 2vh;
+    font-size: 10px;
     text-align: center;
 }
 .formBoxLogin .form-container-login div{
@@ -56,7 +58,7 @@
 .input-container label{
     position:absolute;
     top:35%;
-	font-size:16px;
+	font-size:14px;
     pointer-events: none;
 	transition: all 0.5s ease-in;
 }
@@ -68,7 +70,7 @@
     position: absolute;
     top: 30%;
     right: 0;
-    font-size: 2.5vh;
+    font-size: 10px;
 }
 .formBoxLogin .form-container-login div:nth-child(5){
     display: flex;
@@ -80,7 +82,7 @@
 	outline: none;
     border: none;
     color: #fff;
-    font-size: 3vh;
+    font-size: 12px;
     padding:1vh 3vw;
 	text-transform:uppercase;
 	border-radius:5px;
@@ -112,12 +114,12 @@ width: 100%;
 .form-container-register div h2{
     color: white;
     text-align: center;
-    font-size: 4vh;
+    font-size: 14px;
 }
 .input-container-register label{
     position: absolute;
     color: white;
-    font-size: 3vh;
+    font-size: 14px;
     bottom: 5px;
     z-index: 10;
     transition: top 1s;
@@ -192,7 +194,7 @@ box-shadow: 10px 10px 10px 10vw rgba(0, 0, 0, 0.9) inset;
     border: 0;
     color: #fff;
 	padding:.5rem 1.5rem;
-    font-size: 3vh;
+    font-size: 14px;
     font-weight: 700;
     text-transform:uppercase;
     border-radius:2px;
